<resources>
    <string name="google_map_api_key" translatable="false">AIzaSyBGGKGn4avf4nv_wVYioVeHmCk_6srBQ48</string>
    <string name="app_name">Map Test</string>
    <string name="save">SAVE</string>
    <string name="gps_enabled">GPS is enabled in your device</string>
    <string name="gps_disabled">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="location">Kathmandu, Nepal</string>
    <string name="btnYes">Yes</string>
    <string name="btnNo">No</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="mobile_num">Mobile Number (Required)</string>
    <string name="phone_num">Phone Number (Optional)</string>
    <string name="town_city">Town/City</string>
    <string name="address">Address</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="as_soon_as_possible">As soon as possible</string>
    <string name="next_day">Next Day</string>
    <string name="specified_date">Specified Date</string>
    <string name="specify_date_time">SPECIFY DATE AND TIME BELOW</string>
    <string name="set_address">Set this Address</string>
    <string name="cant_be_empty">Fields cant be empty</string>
    <string name="success"> SUCCESS</string>
</resources>
